--- a/scripts/popup/styles.css
+++ b/scripts/popup/styles.css
@@ -1,6 +1,15 @@
+:root {
+	--color-theme-primary: #ff5500;
+	--color-text-primary: #fff;
+	--color-text-secondary: rgba(255, 255, 255, 0.6);
+	--color-bg-primary: #161616;
+	--color-bg-secondary: #1f1f1f;
+	--color-button-disabled: #fea3756c;
+}
+
 body {
-	background: #161616;
-	color: rgba(255, 255, 255, 0.6);
+	background: var(--color-bg-primary);
+	color: var(--color-text-secondary);
 	font-weight: 400;
 	padding: 15px;
 	width: 290px;
@@ -11,9 +20,8 @@ body {
 	justify-content: center;
 	padding-top: 10px;
 }
-
 .heading {
-	color: #ff5500;
+	color: var(--color-theme-primary);
 	font-size: 18px;
 	font-weight: 700;
 	letter-spacing: 0.8px;
@@ -31,21 +39,21 @@ body {
 }
 
 .sub-heading {
-	color: #fff;
-	font-size: 14px;
-	font-weight: 700;
+	color: var(--color-text-primary);
+	font-size: 13px;
+	font-weight: 600;
 	text-align: start;
 }
 
 .info {
-	color: rgba(255, 255, 255, 0.6);
+	color: var(--color-text-secondary);
 	font-size: 12px;
 	font-style: italic;
 	font-weight: 400;
 }
 
 #FACE-M-creators {
-	color: #fff;
+	color: var(--color-text-primary);
 	font-size: 13px;
 }
 
@@ -58,9 +66,9 @@ body {
 }
 
 .FACE-M-toggle {
-	background: #1f1f1f;
+	background: var(--color-bg-secondary);
 	border: 1px solid #303030;
-	color: rgba(255, 255, 255, 0.6);
+	color: var(--color-text-secondary);
 	cursor: pointer;
 	overflow: hidden;
 	padding: 6px 12px;
@@ -73,7 +81,7 @@ body {
 
 .FACE-M-toggle-active {
 	background: #303030;
-	color: #fff;
+	color: var(--color-text-primary);
 }
 
 .FACE-M-form-div {
@@ -82,10 +90,10 @@ body {
 }
 
 #FACE-M-input {
-	background: #1f1f1f;
+	background: var(--color-bg-secondary);
 	border: 0px;
-	border-bottom: 1px solid #fff;
-	color: #fff;
+	border-bottom: 1px solid var(--color-text-primary);
+	color: var(--color-text-primary);
 	height: 29px;
 	font-size: 13px;
 	padding: 0px 10px;
@@ -94,22 +102,22 @@ body {
 }
 
 #FACE-M-input:disabled {
-	background: #1f1f1f;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+	background: var(--color-bg-secondary);
+	border-bottom: 1px solid var(--color-text-secondary);
 }
 
 #FACE-M-input:disabled::placeholder {
-	color: rgba(255, 255, 255, 0.6);
+	color: var(--color-text-secondary);
 }
 
 #FACE-M-input::placeholder {
-	color: #fff;
+	color: var(--color-text-primary);
 }
 
 #FACE-M-select {
-	background: #1f1f1f;
+	background: var(--color-bg-secondary);
 	border: 0px;
-	color: #fff;
+	color: var(--color-text-primary);
 	height: 29px;
 	font-size: 13px;
 	margin-right: 10px;
@@ -117,33 +125,34 @@ body {
 }
 
 .FACE-M-form-desc {
-	color: rgba(255, 255, 255, 0.6);
+	color: var(--color-text-secondary);
 	font-size: 11px;
-	font-weight: 700;
+	font-weight: 400;
+	padding-right: 20px;
 	text-align: start;
 }
 
 .FACE-M-form-desc-disabled {
-	color: rgba(255, 255, 255, 0.6);
+	color: var(--color-text-secondary);
 	font-size: 11px;
 	font-weight: 700;
 	text-align: start;
 }
 
 .FACE-M-submit-btn {
-	background: #ff5500;
+	background: var(--color-theme-primary);
 	border: 0px;
 	border-radius: 2px;
-	color: #fff;
+	color: var(--color-text-primary);
 	cursor: pointer;
 	font-size: 12px;
 	font-weight: 600;
 	height: 28px;
 	margin-left: auto;
 	margin-right: 0;
+	min-width: 75px;
 	text-transform: uppercase;
 	transition: background 100ms;
-	width: 85px;
 }
 
 .FACE-M-submit-btn:hover:not(:disabled) {
@@ -155,9 +164,79 @@ body {
 }
 
 .FACE-M-submit-btn:disabled {
-	background: #fea3756c;
-	color: rgba(255, 255, 255, 0.6);
+	background: var(--color-button-disabled);
+	color: var(--color-text-secondary);
 	cursor: auto;
+}
+
+.FACE-M-form-switch {
+	display: inline-block;
+	height: 10px;
+	margin-left: auto;
+	margin-right: 0;
+	min-width: 35px;
+	position: relative;
+	width: 25px;
+}
+
+#FACE-M-form-switch-input {
+	display: none;
+}
+
+#FACE-M-form-switch-input:checked + .FACE-M-form-switch-span {
+	background: #fea3756c;
+}
+
+#FACE-M-form-switch-input:checked + .FACE-M-form-switch-span:before {
+	background: var(--color-theme-primary);
+	transform: translate(18px, 0);
+}
+
+.FACE-M-form-switch-span {
+	background: var(--color-text-secondary);
+	border-radius: 28px;
+	bottom: 0;
+	cursor: pointer;
+	display: block;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transition: all 0.25s;
+	width: 100%;
+}
+
+.FACE-M-form-switch-span:before {
+	background: var(--color-text-primary);
+	border-radius: 100%;
+	bottom: -5px;
+	content: '';
+	display: block;
+	height: 20px;
+	left: -2px;
+	position: absolute;
+	transition: all 0.25s;
+	width: 20px;
+}
+
+.FACE-M-form-color-picker {
+	border: none;
+	display: block;
+	opacity: 0;
+}
+
+#FACE-M-form-color-picker-wrapper1 {
+	height: 27px;
+	margin-left: auto;
+	margin-right: 0;
+	width: 34px;
+}
+
+#FACE-M-form-color-picker-wrapper2 {
+	height: 27px;
+	margin-left: 7px;
+	margin-right: 0;
+	width: 34px;
 }
 
 .FACE-M-feedback {
@@ -165,7 +244,7 @@ body {
 	animation: fadeIn 0.25s;
 	background: rgb(0, 153, 51);
 	border-radius: 3px;
-	color: #fff;
+	color: var(--color-text-primary);
 	display: flex;
 	justify-content: center;
 	font-size: 14px;
